[metadata]
name = wei
version = attr: wei.__version__
description = Workcell Execution Interface
long_description = file:README.md
long_description_content_type=text/markdown

url = https://github.com/AD-SDL/wei
author = Rafael Vescovi, Tobias Ginsburg, Ryan Lewis, Kyle Hippe
author_email = ravescovi@anl.gov

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
	docs

[options.package_data]
* = **/*.txt, **/*.yaml, **/*.json

[flake8]
exclude = .git
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231
max-complexity = 14

[tool:pytest]
# https://docs.pytest.org/en/stable/customize.html
addopts = -x
junit_family=xunit1
filterwarnings = ignore::DeprecationWarning

[mypy]
show_error_codes = True
check_untyped_defs = True
follow_imports = normal
strict_optional = True
plugins = pydantic.mypy
strict = True
disallow_untyped_defs = True
implicit_reexport = True

[pydocstyle]
inherit = false
select = D100, D101, D102, D103, D104, D105, D106, D107
match = .*\.py

[isort]
profile = black
skip_gitignore = True
